Fix layout issue (scroll on mobile)

--- a/src/client/app/+home/home-view/home-view.component.scss
+++ b/src/client/app/+home/home-view/home-view.component.scss
@@ -11,7 +11,8 @@
 .entry-list {
   flex: 1;
   padding: 10px;
-  overflow-y: auto;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 
 @media (min-width: $screen-tablet) {
