--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -5,8 +5,9 @@
 html, body {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   margin: 0px;
+  overflow: hidden;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
